...
            "state" : "translated",
            "value" : "Mantén premut un resultat per mostrar o amagar els espòilers"
          }
        }
      }
    },
    "Previews" : {
      "extractionState" : "manual",
      "localizations" : {
        "ca" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Prèvies"
...
            "state" : "translated",
            "value" : "Els resultats apareixen amagats darrere d’una pintura. Mantén premut un per mostrar-lo o amagar-lo i, després, toca’l per obrir-lo."
          }
        }
      }
    },
    "Results today" : {
      "extractionState" : "manual",
      "localizations" : {
        "ca" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Resultats d’avui"
...
